# Pashu-Aadhar-cattle_breed_identification

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  ai_model.py  app.py  auth_routes.py  cattle_routes.py  docker-compose.yml  gitignore  models.py  pyproject.toml  requirements.txt  resnet50_model.h5  routes.py  seed_data.py
attached_assets/templates/auth/: login.html  register.html
static/css/: style.css
static/js/: camera.js  upload.js
templates/: 404.html  500.html  base.html  breed_details.html  identify.html  index.html  results.html
templates/auth/: login.html  profile.html  register.html  verify_otp.html
templates/cattle/: add_cattle.html  cattle_details.html  dashboard.html  delete_confirmation.html  nutrition_plan.html  nutrition_plan_form.html  public_cattle_card.html
utils/: .env  sms_service.py  utils.py
